--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,6 +40,10 @@ nav ul li{
   padding-left: 1rem;
 }
 
+nav ul li:hover{
+  text-decoration: underline;
+}
+
 .name{
   padding-right: 40rem;
   height:2rem;
@@ -50,6 +54,29 @@ nav ul li{
 strong{
   font-weight: bold;
   color:black;
+}
+
+.mobile{
+  display:none;
+}
+
+@media only screen and (max-width: 480px) {
+
+  .mobile{
+    overflow: hidden;
+    height:4rem;
+    display:inline-flex;
+    justify-content: space-between;
+    width: 90%;
+    height: auto;
+  }
+
+  .desktop{
+    display: none;
+  }
+  .name{
+    padding:0;
+  }
 }
 
 
@@ -66,6 +93,7 @@ strong{
 .banner .image{
   width:60%;
 }
+
 #banner{
     width:100%;
     padding-right: 1.5rem;
@@ -96,6 +124,46 @@ strong{
   margin-left: 1.5rem;
   color: white;
   width:75%;
+}
+
+.start-button:hover{
+  background-color: white;
+  color:rgb(74, 74, 74);
+}
+
+@media only screen and (max-width: 480px) {
+  .banner{
+    width: 100%;
+    height: auto;
+    display:flex;
+    flex-direction: column;
+    padding: 0;
+  }
+  .banner .text{
+    width: 100%;
+    height: auto;
+  }
+.banner .image{
+  width: 100%;
+  height: auto;
+}
+#banner{
+  padding:0;
+  width:100%;
+  height:auto;
+}
+
+.banner .text h1{
+    padding-top: 2rem;
+    padding-left:1rem;
+    font-size: 1.75rem;
+  }
+  .banner .text h2{
+    padding-bottom: 1.5rem;
+  }
+  .start-button{
+    padding-bottom: 2rem;
+}
 }
 
 /* Information section */
@@ -169,6 +237,29 @@ display:block;
   padding-left: 1.5rem;
 }
 
+@media only screen and (max-width: 480px) {
+
+  .information{
+    padding:0;
+  }
+  .container-left{
+    display:none;
+  }
+  .container-right{
+    overflow:hidden;
+    max-width: 100%;
+  }
+  .orientation,
+  .campus,
+  .guest{
+    display:block;
+    max-width: 100%;
+    height:auto;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+}
 
 /* Courses section */
 .courses-container{
@@ -246,7 +337,19 @@ display:block;
   padding-bottom: 3.5rem;
 }
 
-
+@media only screen and (max-width: 480px) {
+  .courses img{
+    display:none;
+  }
+  .courses p{
+    display:none;
+  }
+  .text h2{
+    display:flex;
+    flex-direction:column;
+  flex-wrap:nowrap;
+  }
+}
 
 /* Thesis secion */
 
@@ -300,6 +403,22 @@ display:block;
   padding-left: 1.5rem;
 }
 
+@media only screen and (max-width: 480px) {
+  .container-small{
+    display:none;
+  }
+  .container-video h2{
+    display:none;
+  }
+  .container-video p{
+    display:none;
+  }
+  .container-video{
+    display:block;
+    max-width: 100%;
+    height: auto;
+  }
+}
 
 /* Footer */
 
@@ -309,11 +428,23 @@ footer {
 }
 
 footer span{
-  padding-right: 49rem;
+  padding-right: 45rem;
 }
 
 footer ul li{
   display:inline;
   padding-left: .5rem;
 
+}
+@media only screen and (max-width: 480px) {
+footer{
+  padding-right: 0;
+  padding-left:0;
+  padding-top:1.5rem;
+}
+footer span{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: inline-flex;
+}
 }
