--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,13 +122,18 @@ strong{
   padding-top:1rem;
   padding-bottom:1rem;
   margin-left: 1.5rem;
-  color: white;
   width:75%;
+}
+
+.banner a{
+  color: white;
 }
 
 .start-button:hover{
   background-color: white;
-  color:rgb(74, 74, 74);
+}
+.banner a:hover{
+  color:darkgray;
 }
 
 @media only screen and (max-width: 480px) {
@@ -137,7 +142,10 @@ strong{
     height: auto;
     display:flex;
     flex-direction: column;
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 2rem;
+    padding-left: 0;
+    padding-right: 0;
   }
   .banner .text{
     width: 100%;
@@ -162,7 +170,8 @@ strong{
     padding-bottom: 1.5rem;
   }
   .start-button{
-    padding-bottom: 2rem;
+    margin-left: 1rem;
+    width:83%;
 }
 }
 
@@ -229,6 +238,9 @@ display:block;
   color:rgb(110,180,255);
   padding-top: 1rem;
 }
+.link:active{
+  color:white;
+}
 
  .text{
   display:flex;
@@ -247,18 +259,38 @@ display:block;
   }
   .container-right{
     overflow:hidden;
-    max-width: 100%;
+    width: 100%;
   }
   .orientation,
   .campus,
   .guest{
+    overflow: hidden;
     display:block;
-    max-width: 100%;
+    width: 100%;
     height:auto;
     padding: 1rem;
-    margin-bottom: 1rem;
 }
-
+.orientation .image,
+.campus .image,
+.guest .image{
+  width: 90%;
+  height: 70%;
+}
+.guest{
+  background-color:white;
+}
+.guest p{
+  width:75%;
+}
+.orientation .text,
+.campus .text,
+.guest .text{
+  padding-top: 2rem;
+  position:relative;
+  bottom:2rem;
+  background-color: white;
+  width: 100%;
+}
 }
 
 /* Courses section */
@@ -312,6 +344,12 @@ display:block;
   .marketing p{
     padding-top: 1rem;
   }
+  .courses a:active{
+    color:lightgray;
+  }
+  .courses a:hover{
+    color:darkgray;
+  }
 
 
 .software .text,
@@ -338,16 +376,40 @@ display:block;
 }
 
 @media only screen and (max-width: 480px) {
+  .courses-container{
+    background-color: white;
+  }
+  .courses{
+    display:block;
+    width:100%;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .courses .text{
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1.5rem;
+    background-color: rgb(216, 216, 216);
+  }
   .courses img{
     display:none;
   }
   .courses p{
     display:none;
   }
-  .text h2{
-    display:flex;
-    flex-direction:column;
-  flex-wrap:nowrap;
+  .software,
+  .computer-art,
+  .design,
+  .data,
+  .business,
+  .marketing{
+  width:90%;
+  }
+
+  #longer{
+    padding-bottom:1.5rem;
   }
 }
 
@@ -415,8 +477,12 @@ display:block;
   }
   .container-video{
     display:block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    padding-left:0;
+    padding-right:0;
   }
 }
 
@@ -438,13 +504,14 @@ footer ul li{
 }
 @media only screen and (max-width: 480px) {
 footer{
-  padding-right: 0;
-  padding-left:0;
-  padding-top:1.5rem;
+  padding: 1rem;
+  width:100%;
+}
+footer ul li{
+  display:none;
 }
 footer span{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  display: inline-flex;
+  padding:0;
+  width:100%;
 }
 }
